# atomicdatabase

./: #main.js#  #test.js#  .#main.js  .atomic_history  .gitignore  Cargo.toml  GOALS.md  LICENSE  Pipfile  README.md  atomicdb  change  default_knowledgebase  engine.js  exampledb.json  foo_db  imgui.ini  index.html  log  main.js  package.json  perf.data  perf.data.old  requirements.txt  setup.py  setup.rb  test.db.json  test.js  test.pl  test_db
AtomicDatabase/: .#eav_database.py  __init__.py  __main__.py  database_tests.py  eav_database.py  eav_database.py.bak  gui_windows.py  nl_eav_interface.py  tco.py  utils.py
Atomic_Database.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: WEBSITE.md
public/: frontend.js  index.html  rules.html  rules.js  theme.css
src/: main.rs
src/database/: backtracking.rs  evaluator.rs  mod.rs  parser.rs  unification.rs
