[package]
name = "atomicdatabase"
version = "3.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4"
lazy-regex = "3.0.0"
dashmap = { version = "5.5.0", features = ["rayon"] }
rustyline = { version = "12.0.0", features = ["with-fuzzy"] }

[dependencies.uuid]
version = "1.4.0"
features = [
         "v4",
         "fast-rng",
         "macro-diagnostics"
]
